--- a/index.html
+++ b/index.html
@@ -5,16 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=""style.css>
+    <link rel="stylesheet" href="style.css">
     <title>Coge</title>
 </head>
 
 <body>
-    <div>
-        <h2>Color palettes</h2>
+    <div class="container-main">
+        <div class="panel-pick">
+            <button id="btn-pick">Pick a Color</button>
+            <!-- <button id="btn-export">Export Colors</button> -->
+        </div>
+        <div class="color-list hide">
+            <header>
+                <p class="title">
+                    Picked Colors
+                </p>
+                <span id="clear-btn">Clear All</span>
+            </header>
+            <ul class="all-colors"></ul>
+        </div>
     </div>
-
+    <script src="index.js"></script>
 </body>
-<script src="script.js"></script>
+
 
 </html>
