added collecting the color from the circle

--- a/index.html
+++ b/index.html
@@ -12,15 +12,11 @@
 <body>
     <div class="container-main">
         <div class="panel-pick">
-            <button id="btn-pick">Pick a Color</button>
+            <button class="btn-pick">+</button>
+            <button id="clear-btn">&#x21bb;</button>
         </div>
         <div class="color-list hide">
-            <header>
-                <p class="title">
-                    Picked Colors
-                </p>
-                <span id="clear-btn">Clear All</span>
-            </header>
+            
             <ul class="all-colors"></ul>
         </div>
     </div>
